ver usuarios funcionando, menu dnamico desde base de datos, commit antes de empezar a configurar ultimos detalles graficos plantilla

--- a/src/app/aplicacion/home/home.component.html
+++ b/src/app/aplicacion/home/home.component.html
@@ -1,10 +1,4 @@
-<div class="page-title">
-    <div class="title_left">
-        <h3>Home</h3>
-    </div>
-</div>
-
-<div class="clearfix"></div>
+home
 
 <!-- <div class="row">
     <div class="x_panel">
