--- a/src/app/aplicacion/pagina.component.html
+++ b/src/app/aplicacion/pagina.component.html
@@ -6,13 +6,13 @@
             <!-- ------------------------------------------ MENU LATERAL --------------------------------------------- -->
             <!-- ----------------------------------------------------------------------------------------------------- -->
 
-            <app-menu-lateral></app-menu-lateral>
+            <app-menu-lateral [usuario]="usuario"></app-menu-lateral>
 
             <!-- ----------------------------------------------------------------------------------------------------- -->
             <!-- ----------------------------------------- TOP NAVEGATION -------------------------------------------- -->
             <!-- ----------------------------------------------------------------------------------------------------- -->
 
-            <app-top-navegation></app-top-navegation>
+            <app-top-navegation [usuario]="usuario"></app-top-navegation>
 
 
             <!-- ----------------------------------------------------------------------------------------------------- -->
@@ -21,9 +21,14 @@
 
             <!-- page content -->
             <div class="right_col" role="main">
-                <div class="">
+
+
+                <app-titulo></app-titulo>
+
+                <div style="max-height: 100% !important;">
                     <router-outlet></router-outlet>
                 </div>
+
             </div>
 
             <!-- ----------------------------------------------------------------------------------------------------- -->
