--- a/src/app/aplicacion/top-navegation/top-navegation.component.html
+++ b/src/app/aplicacion/top-navegation/top-navegation.component.html
@@ -3,16 +3,16 @@
     <div class="nav_menu">
 
 
-        <!-- <div class="nav toggle">
+        <div class="nav toggle">
             <a id="menu_toggle"><i class="fa fa-bars"></i></a>
-        </div> -->
+        </div>
 
 
         <nav class="nav navbar-nav">
             <ul class=" navbar-right">
                 <li class="nav-item dropdown open" style="padding-left: 15px;">
                     <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                        <img src="assets/images/img.jpg" alt="">John Doe
+                        <img src="assets/images/user.png" alt="">{{usuario.nombres}}
                     </a>
                     <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="javascript:;"> Profile</a>
@@ -21,7 +21,7 @@
                             <span>Settings</span>
                         </a>
                         <a class="dropdown-item" href="javascript:;">Help</a>
-                        <a class="dropdown-item" routerLink="/login"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                        <a class="dropdown-item" (click)="usuarioService.logout()"><i class="fa fa-sign-out pull-right"></i> Cerrar Sesión</a>
                     </div>
                 </li>
 
@@ -33,7 +33,7 @@
                     <ul class="dropdown-menu list-unstyled msg_list" role="menu" aria-labelledby="navbarDropdown1">
                         <li class="nav-item">
                             <a class="dropdown-item">
-                                <span class="image"><img src="assets/images/img.jpg" alt="Profile Image" /></span>
+                                <span class="image"><img src="assets/images/user.png" alt="Profile Image" /></span>
                                 <span>
                 <span>John Smith</span>
                                 <span class="time">3 mins ago</span>
