--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 
-body {
+
+/* body {
     background-color: #f7f7f7 !important;
+} */
+
+.active {
+    color: white !important;
+}
+
+.img-50 {
+    width: 50px;
 }
