ultimos detalles en el json para crear usuario desde la aplicacion  antes de enlazarlo con la api

--- a/src/app/aplicacion/pagina.component.html
+++ b/src/app/aplicacion/pagina.component.html
@@ -1,46 +1,42 @@
-<div class="nav-md footer_fixed">
-    <div class="container body">
-        <div class="main_container">
+<!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- ------------------------------------------ MENU LATERAL --------------------------------------------- -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
 
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-            <!-- ------------------------------------------ MENU LATERAL --------------------------------------------- -->
-            <!-- ----------------------------------------------------------------------------------------------------- -->
+<app-menu-lateral [usuario]="usuario"></app-menu-lateral>
 
-            <app-menu-lateral [usuario]="usuario"></app-menu-lateral>
+<!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- ----------------------------------------- TOP NAVEGATION -------------------------------------------- -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
 
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-            <!-- ----------------------------------------- TOP NAVEGATION -------------------------------------------- -->
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-
-            <app-top-navegation [usuario]="usuario"></app-top-navegation>
+<app-top-navegation [usuario]="usuario"></app-top-navegation>
 
 
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-            <!-- ------------------------------------------- CONTENIDO --------------------------------------------- -->
-            <!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- ------------------------------------------- CONTENIDO --------------------------------------------- -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
 
-            <!-- page content -->
-            <div class="right_col" role="main">
+<!-- page content -->
+<div class="right_col" style="min-height:1659px" role="main">
 
+    <div class="row">
 
-                <app-titulo></app-titulo>
+        <div class="col-md-12 col-sm-12 col-xs-12">
+            <app-titulo></app-titulo>
 
-                <div style="max-height: 100% !important;">
-                    <router-outlet></router-outlet>
-                </div>
-
+            <div style="max-height: 100% !important;">
+                <router-outlet></router-outlet>
             </div>
-
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-            <!-- ---------------------------------------------- FOOTER ----------------------------------------------- -->
-            <!-- ----------------------------------------------------------------------------------------------------- -->
-
-            <footer>
-                <app-footer></app-footer>
-            </footer>
-
-
-
         </div>
+
+
     </div>
 </div>
+
+
+<!-- ----------------------------------------------------------------------------------------------------- -->
+<!-- ---------------------------------------------- FOOTER ----------------------------------------------- -->
+<!-- ----------------------------------------------------------------------------------------------------- -->
+
+<!-- <footer>
+    <app-footer></app-footer>
+</footer> -->
