--- a/src/app/aplicacion/menu-lateral/menu-lateral.component.html
+++ b/src/app/aplicacion/menu-lateral/menu-lateral.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-3 left_col menu_fixed">
+<div class="col-md-3 left_col">
     <div class="left_col scroll-view">
         <div class="navbar nav_title" style="border: 0;">
             <a href="index.html" class="site_title"><i class="fa fa-paw"></i> <span>Gentelella Alela!</span></a>
@@ -29,7 +29,7 @@
                     <h3>{{m.modulo}}</h3>
 
 
-                    <ul class="nav">
+                    <ul class="nav side-menu">
                         <!-- // ======================================
                            // Sub menu
                            // ====================================== -->
@@ -42,7 +42,7 @@
         <!-- /sidebar menu -->
 
         <!-- /menu footer buttons -->
-        <div class="sidebar-footer hidden-small">
+        <!-- <div class="sidebar-footer hidden-small">
             <a data-toggle="tooltip" data-placement="top" title="Settings">
                 <span class="glyphicon glyphicon-cog" aria-hidden="true"></span>
             </a>
@@ -55,7 +55,7 @@
             <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
                 <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
             </a>
-        </div>
+        </div> -->
         <!-- /menu footer buttons -->
     </div>
 </div>
