--- a/src/app/aplicacion/top-navegation/top-navegation.component.html
+++ b/src/app/aplicacion/top-navegation/top-navegation.component.html
@@ -4,7 +4,7 @@
 
 
         <div class="nav toggle">
-            <a id="menu_toggle"><i class="fa fa-bars"></i></a>
+            <a id="menu_toggle" (click)="toggleClicked($event)"><i class="fa fa-bars"></i></a>
         </div>
 
 
