--- a/src/app/aplicacion/pagina.component.html
+++ b/src/app/aplicacion/pagina.component.html
@@ -16,14 +16,14 @@
 <!-- ----------------------------------------------------------------------------------------------------- -->
 
 <!-- page content -->
-<div class="right_col" style="min-height:1659px" role="main">
+<div class="right_col" style="min-height:700px" role="main">
 
     <div class="row">
 
         <div class="col-md-12 col-sm-12 col-xs-12">
             <app-titulo></app-titulo>
 
-            <div style="max-height: 100% !important;">
+            <div>
                 <router-outlet></router-outlet>
             </div>
         </div>
@@ -37,6 +37,6 @@
 <!-- ---------------------------------------------- FOOTER ----------------------------------------------- -->
 <!-- ----------------------------------------------------------------------------------------------------- -->
 
-<!-- <footer>
-    <app-footer></app-footer>
-</footer> -->
+<footer>
+    <!-- <app-footer></app-footer> -->
+</footer>
