--- a/src/app/aplicacion/modulos/administracion/usuarios/usuarios.component.html
+++ b/src/app/aplicacion/modulos/administracion/usuarios/usuarios.component.html
@@ -35,7 +35,7 @@
                         <td>{{u.correo}}</td>
                         <td>{{u.rol.rol}}</td>
                         <td class="text-right">
-                            <button class="btn btn-warning" style="color: white !important;"><i class="fa fa-pencil"></i></button>
+                            <button class="btn btn-warning" style="color: white !important;" (click)="editarUsuario(u)"><i class="fa fa-pencil"></i></button>
                             <button class="btn btn-danger"><i class="fa fa-trash"></i></button>
                         </td>
                     </tr>
