--- a/src/app/aplicacion/menu-lateral/menu-lateral.component.html
+++ b/src/app/aplicacion/menu-lateral/menu-lateral.component.html
@@ -9,7 +9,7 @@
         <!-- menu profile quick info -->
         <div class="profile clearfix">
             <div class="profile_pic">
-                <img src="assets/images/user.png" alt="..." class="img-circle profile_img">
+                <img [src]="apiUrl + '/imagenes/' + usuario.imagen" alt="..." class="img-circle profile_img">
             </div>
             <div class="profile_info">
                 <span>Bienvenido,</span>
