--- a/src/app/aplicacion/top-navegation/top-navegation.component.html
+++ b/src/app/aplicacion/top-navegation/top-navegation.component.html
@@ -12,7 +12,7 @@
             <ul class=" navbar-right">
                 <li class="nav-item dropdown open" style="padding-left: 15px;">
                     <a href="javascript:;" class="user-profile dropdown-toggle" aria-haspopup="true" id="navbarDropdown" data-toggle="dropdown" aria-expanded="false">
-                        <img src="assets/images/user.png" alt="">{{usuario.nombres}}
+                        <img [src]="apiUrl + '/imagenes/' + usuario.imagen" alt="">{{usuario.nombres}}
                     </a>
                     <div class="dropdown-menu dropdown-usermenu pull-right" aria-labelledby="navbarDropdown">
                         <a class="dropdown-item" href="javascript:;"> Profile</a>
