--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,9 @@
 .img-50 {
     width: 50px;
 }
+
+.custom-file-upload {
+    display: inline-block;
+    padding: 6px 12px;
+    cursor: pointer;
+}
