--- a/src/app/aplicacion/modulos/administracion/usuarios/crear-editar.component.html
+++ b/src/app/aplicacion/modulos/administracion/usuarios/crear-editar.component.html
@@ -31,11 +31,6 @@
 
                 </div>
             </div>
-
-
-
-
-
             <br>
         </div>
 
@@ -228,15 +223,9 @@
 
 
         <div class="x_title">
-
             <h2>Permisos y funcionalidades</h2>
-            <!-- <h3 *ngIf="formUsuario.value.rol !== 'Rol' "> {{formUsuario.value.rol}}</h3> -->
+            <div class="clearfix"></div>
         </div>
-
-
-
-
-        <div class="clearfix"></div>
     </div>
 
     <div class="col-md-12 col-sm-12" *ngIf="menuyPermisos">
@@ -324,7 +313,7 @@
     <div class="ln_solid"></div>
     <div class="form-group">
         <div class="text-center">
-            <button class="btn btn-success'" type="submit" style="background-color: #26B99A !important;">  <span *ngIf="editar === 'editar'" style="color: white !important;">Editar Usuario</span>  <span *ngIf="editar === 'crear'" style="color: white !important;">Crear Usuario</span></button>
+            <button class="btn btn-success" type="submit" style="background-color: #26B99A !important;">  <span *ngIf="editar === 'editar'" style="color: white !important;">Editar Usuario</span>  <span *ngIf="editar === 'crear'" style="color: white !important;">Crear Usuario</span></button>
         </div>
     </div>
 
