--- a/src/app/aplicacion/pagina.component.html
+++ b/src/app/aplicacion/pagina.component.html
@@ -16,7 +16,8 @@
 <!-- ----------------------------------------------------------------------------------------------------- -->
 
 <!-- page content -->
-<div class="right_col" style="min-height:700px" role="main">
+<!-- [style.height.px]="altura" -->
+<div #contenedor id="contenedor" class="right_col" style="min-height: 1000px !important;" role="main">
 
     <div class="row">
 
